Bug 1128811 - Reject data wait promises when we seek. r=cpearce a=lmandel

--HG--
extra : source : baffa46b36fe23c48972bcabe49f725227a3026c
extra : amend_source : edf9887a2a0d6f2ef1bd1f4805e68f73d8fc9528